After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741829 - Two #ifdef are missing when making gbm optional
Two #ifdef are missing when making gbm optional
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-12-21 08:59 UTC by Ting-Wei Lan
Modified: 2014-12-21 09:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add two missing #ifdef to make gbm optional (1.23 KB, patch)
2014-12-21 08:59 UTC, Ting-Wei Lan
reviewed Details | Review
Add a missing #ifdef and remove a left-over include to make gbm optional (1.24 KB, patch)
2014-12-21 09:29 UTC, Ting-Wei Lan
needs-work Details | Review
Add a missing #ifdef and remove a left-over include to make gbm optional (1.37 KB, patch)
2014-12-21 09:40 UTC, Ting-Wei Lan
accepted-commit_now Details | Review

Description Ting-Wei Lan 2014-12-21 08:59:29 UTC
Created attachment 293146 [details] [review]
Add two missing #ifdef to make gbm optional

Please see the patch.
Comment 1 Florian Müllner 2014-12-21 09:25:21 UTC
Review of attachment 293146 [details] [review]:

::: src/backends/meta-cursor-renderer.h
@@ +34,1 @@
 #include <gbm.h>

This include appears to be a left-over, so you should just remove it unconditionally
Comment 2 Ting-Wei Lan 2014-12-21 09:29:29 UTC
Created attachment 293147 [details] [review]
Add a missing #ifdef and remove a left-over include to make gbm optional
Comment 3 Florian Müllner 2014-12-21 09:31:59 UTC
Review of attachment 293147 [details] [review]:

Nope, that was backwards - gbm is (optionally) used in meta-cursor-private.h, the include in meta-cursor-renderer.h is unused
Comment 4 Ting-Wei Lan 2014-12-21 09:40:21 UTC
Created attachment 293148 [details] [review]
Add a missing #ifdef and remove a left-over include to make gbm optional
Comment 5 Florian Müllner 2014-12-21 09:41:39 UTC
Review of attachment 293148 [details] [review]:

LGTM