Add a missing #ifdef and remove a left-over include to make gbm optional

https://bugzilla.gnome.org/show_bug.cgi?id=741829